--- a/Lancher/Lancher.csproj
+++ b/Lancher/Lancher.csproj
@@ -127,6 +127,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -139,6 +141,7 @@
   <ItemGroup>
     <Compile Include="Dll.cs" />
     <Compile Include="LogHelper.cs" />
+    <Compile Include="NotifyIconHelper.cs" />
     <Compile Include="PluginManagment.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProgressMessage.cs" />
