--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -140,6 +140,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dll.cs" />
+    <Compile Include="Forms\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="LogHelper.cs" />
     <Compile Include="NotifyIconHelper.cs" />
     <Compile Include="PluginManagment.cs" />
@@ -170,6 +176,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Forms\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\Icon.ico" />
     <Content Include="FodyWeavers.xml" />
   </ItemGroup>
