--- a/Deserizition/Deserizition.csproj
+++ b/Deserizition/Deserizition.csproj
@@ -55,6 +55,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SuperSocket.ClientEngine, Version=0.10.0.0, Culture=neutral, PublicKeyToken=ee9af13f57f00acc, processorArchitecture=MSIL">
+      <HintPath>..\packages\SuperSocket.ClientEngine.Core.0.10.0\lib\net45\SuperSocket.ClientEngine.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -65,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FriendsList.cs" />
     <Compile Include="GroupMemberList.cs" />
     <Compile Include="ReceiveMessage.cs" />
     <Compile Include="PicMessage.cs" />
@@ -72,6 +76,15 @@
     <Compile Include="Save.cs" />
     <Compile Include="TextMessage.cs" />
     <Compile Include="XMLMessage.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SocketIO\SocketIOClient.csproj">
+      <Project>{352c9bc1-f74c-4741-a09d-7227bc60c057}</Project>
+      <Name>SocketIOClient</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
