--- a/Launcher/packages.config
+++ b/Launcher/packages.config
@@ -3,6 +3,7 @@
   <package id="Costura.Fody" version="4.1.0" targetFramework="net45" />
   <package id="Fody" version="6.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net40" requireReinstallation="true" />
+  <package id="sqlSugar" version="5.0.0.15" targetFramework="net45" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net40" requireReinstallation="true" />
   <package id="WebSocket4Net" version="0.15.2" targetFramework="net40" requireReinstallation="true" />
 </packages>
