--- a/Deserizition/Deserizition.csproj
+++ b/Deserizition/Deserizition.csproj
@@ -60,6 +60,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,6 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoreHelper.cs" />
     <Compile Include="FriendsList.cs" />
     <Compile Include="GroupMemberList.cs" />
     <Compile Include="ReceiveMessage.cs" />
