--- a/Deserizition/packages.config
+++ b/Deserizition/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SqlSugar" version="5.0.2.2" targetFramework="net45" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net45" />
 </packages>
