--- a/Sdk/Launcher.Sdk.csproj
+++ b/Sdk/Launcher.Sdk.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D7A958B3-79D9-49F8-8BB4-9619BAB6ECBA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lancher.Sdk</RootNamespace>
-    <AssemblyName>Lancher.Sdk</AssemblyName>
+    <RootNamespace>Launcher.Sdk</RootNamespace>
+    <AssemblyName>Launcher.Sdk</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -22,7 +22,8 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <PlatformTarget>x86</PlatformTarget>
-    <DocumentationFile>bin\x86\Debug\Lancher.Sdk.xml</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
