--- a/Launcher/packages.config
+++ b/Launcher/packages.config
@@ -3,13 +3,16 @@
   <package id="Costura.Fody" version="4.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net45" />
   <package id="Fody" version="6.0.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net40" requireReinstallation="true" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
+  <package id="SocketIOClient" version="2.1.7" targetFramework="net45" />
   <package id="SqlSugar" version="5.0.1.7" targetFramework="net45" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net45" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.113.6" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.113.6" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Linq" version="1.0.113.0" targetFramework="net45" />
   <package id="WebSocket4Net" version="0.15.2" targetFramework="net40" requireReinstallation="true" />
+  <package id="WebSocketSharp-netstandard" version="1.0.1" targetFramework="net45" />
 </packages>
