处理临时消息（文本 图片）

--- a/Deserizition/Deserizition.csproj
+++ b/Deserizition/Deserizition.csproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FriendsList.cs" />
+    <Compile Include="GroupList.cs" />
     <Compile Include="GroupMemberList.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="LogModel.cs" />
